--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,1 +1,6 @@
-%h1 Got here.
+%h1 Brian and Jillian
+%h2 Mr. Medford's 2nd Period Ruby Development Class: A+++
+#anonymous
+= link_to('Register', new_teacher_path, :remote => true, :class => 'button tiny radius')
+= link_to('Login', login_path, :remote => true, :class => 'button tiny radius')
+#form
