Modified teacher registration for passing tests

--- a/app/views/teachers/_form.html.haml
+++ b/app/views/teachers/_form.html.haml
@@ -12,5 +12,5 @@
       = f.label :password_confirmation
       = f.password_field :password_confirmation
       = button_to_function('Cancel', 'cancel_teacher_form()', :class => 'button tiny radius alert')
-      = f.submit nil, :class => 'button tiny radius success'
+      = f.submit "Create Account", :class => 'button tiny radius success'
   .large-9.columns
