--- a/app/views/teachers/_form.html.haml
+++ b/app/views/teachers/_form.html.haml
@@ -1,5 +1,6 @@
 .row
   .large-3.columns
+    = render(:partial => 'shared/errors', :locals => {:object => @teacher})
     = form_for @teacher, :url => teachers_path, :remote => true do |f|
       = f.label :email
       = f.text_field :email
