played around with basic design, added tabs, and teachers can see a list of classes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
   <%= render :partial => 'layouts/nav' %>
+
+  <%= render :partial => 'layouts/body' %>
   <%= yield %>
   <%= render :partial => 'layouts/footer' %>
 
