--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,9 @@
   <div class="large-12 columns">
     <div class="row">
       <div class="large-6 columns">
+        <h6>Brian and Jillian</h6>
+        <h6>Medford's 2nd Period Ruby Development Class: A+++</h6>
+
         <h6 class='subheader'>&copy; Youngblood Yingling Productions</h6>
       </div>
       <div class="large-6 columns">
