--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,28 @@
-<div class="row">
+<div class='row'>
+    <div class='nav-bar left'>
+      <h2 class='subheader'>Gradr</h2>
+    </div>
+    <div class='nav-bar right'>
+      <ul class='button-group'>
+        <li><%== login_nav %></li>
+      </ul>
+    </div>
+</div>
+<div class='row'>
+  <div class='tabbable'>
+    <ul class="nav nav-tabs">
+      <li class="active">
+        <a href="#">Gradr</a>
+      </li>
+      <li><%= link_to "My Classes", klasses_path, :remote=>true %></li>
+      <li><a href="#">My Assignments</a></li>
+      <li><a href="#">My Students</a></li>
+      <li>
+    </ul>
+  </div>
+</div>
+
+<!-- <div class="row">
   <div class="large-12 columns">
     <div class="nav-bar right">
      <ul class="button-group">
@@ -10,4 +34,5 @@
     <h2 class='subheader'>Gradr</h2>
   </div>
 </div>
+ -->
 
