--- a/app/views/session/_form.html.haml
+++ b/app/views/session/_form.html.haml
@@ -7,5 +7,5 @@
       = label_tag :password
       = password_field_tag :password
       = button_to_function('Cancel', 'cancel_login_form()', :class => 'button tiny radius alert')
-      = submit_tag 'Login', :class => 'button tiny radius success'
+      = submit_tag 'Log In', :class => 'button tiny radius success'
   .large-3.columns
