--- a/app/assets/stylesheets/gradr.scss
+++ b/app/assets/stylesheets/gradr.scss
@@ -3,7 +3,7 @@
 
 body
 {
-  background: url(http://www.charlesrussell.co.uk/UserFiles/image/blackboard-with-chalk.jpg) no-repeat center center fixed;
+  background: url(blackboard.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -21,4 +21,9 @@ body
 font-family: 'Old Standard TT', serif;
 font-size: 24px;
 font-weight: bold;
+}
+
+.button_font
+{
+  font-family: 'Old Standard TT', serif;
 }
