--- a/app/assets/stylesheets/gradr.scss
+++ b/app/assets/stylesheets/gradr.scss
@@ -27,3 +27,14 @@ font-weight: bold;
 {
   font-family: 'Old Standard TT', serif;
 }
+
+.congratulations
+{
+  color: white;
+}
+
+.form_text
+{
+  color: white;
+  font-family: 'Old Standard TT', serif;
+}
