--- a/app/assets/stylesheets/gradr.scss
+++ b/app/assets/stylesheets/gradr.scss
@@ -43,3 +43,13 @@ font-weight: bold;
   color: white;
   font-family: 'Old Standard TT', serif;
 }
+
+.login_form
+{
+  color: white;
+}
+
+p
+{
+  color: white;
+}
