--- a/app/views/session/_form.html.haml
+++ b/app/views/session/_form.html.haml
@@ -1,11 +1,11 @@
 .row
-  .large-6.columns
   .large-3.columns
     = form_tag '/login', :remote => true do
-      = label_tag :email, :class => 'form_text'
+      = label_tag :email
       = text_field_tag :email, nil, :autofocus => true
-      = label_tag :password, :class => 'form_text'
+      = label_tag :password
       = password_field_tag :password
       = button_to_function('Cancel', 'cancel_login_form()', :class => 'button tiny radius alert')
       = submit_tag 'Log In', :class => 'button tiny radius success'
-  .large-3.columns
+  .large-9.columns
+
