--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -17,7 +17,7 @@
         <li><%= link_to "Gradr", root_path, :class => 'tabs' %></li>
       </li>
       <li><%= link_to "My Classes", klasses_path, :class => 'tabs', :remote=>true %></li>
-      <li><%= link_to "My Assignments", assessments_path, :class => 'tabs' %></li>
+      <li><%= link_to "My Assignments", assessments_path, :class => 'tabs', :remote=>true %></li>
       <li><%= link_to "My Students", students_path, :class => 'tabs' %></li>
     </ul>
   </div>
