--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,3 +4,4 @@
     = link_to('Register', new_teacher_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
     = link_to('Login', login_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
     #form
+#container
