--- a/app/views/students/_index.html.haml
+++ b/app/views/students/_index.html.haml
@@ -1,7 +1,12 @@
 .row
   .large-12.columns
+    #anonymous
+    = link_to('Add Student', new_student_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
+    = link_to('Delete Student', new_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
     %h4 Students
     %ul
       %li last_name + ',' + 'first_name'
       - @students.each do |student|
       = link_to student.last_name, klass, :remote=>true
+#form
+#container
