--- a/app/views/students/index.js.erb
+++ b/app/views/students/index.js.erb
@@ -1,6 +1,7 @@
-.row
-  .large-12.columns
-    #anonymous
-    = link_to('Add Student', new_student_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
-    = link_to('Delete Student', new_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
-$('#container').empty().append("<%=j render :partial=>'index' %>")
+// .row
+//   .large-12.columns
+//     #anonymous
+//     = link_to('Add Student', new_student_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
+//     = link_to('Delete Student', new_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
+// $('#container').empty().append("<%=j render :partial=>'index' %>")
+$('#container').empty().append("<%=j render :partial=>'index' %>");
