--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,7 +18,7 @@
       </li>
       <li><%= link_to "My Classes", klasses_path, :class => 'tabs', :remote=>true %></li>
       <li><%= link_to "My Assignments", assessments_path, :class => 'tabs', :remote=>true %></li>
-      <li><%= link_to "My Students", students_path, :class => 'tabs' %></li>
+      <li><%= link_to "My Students", students_path, :class => 'tabs', :remote=>true %></li>
     </ul>
   </div>
 </div>
