--- a/app/views/session/_form.html.haml
+++ b/app/views/session/_form.html.haml
@@ -3,11 +3,8 @@
     = form_tag '/login', :remote => true do
       = label_tag :email
       = text_field_tag :email, nil, :autofocus => true
-      = label_tag :password
-      = label_tag :email, nil, :class => 'form_text'
-      = text_field_tag :email, nil, :autofocus => true
       = label_tag :password, nil, :class => 'form_text'
-      = password_field_tag :password
+      = text_field_tag :password
       = button_to_function('Cancel', 'cancel_login_form()', :class => 'button tiny radius alert')
       = submit_tag 'Log In', :class => 'button tiny radius success'
   .large-9.columns
