added klass functionality

--- a/app/views/klasses/_index.html.haml
+++ b/app/views/klasses/_index.html.haml
@@ -1,5 +1,8 @@
 .row
   .large-12.columns
+    = link_to "New Class", new_klass_path, :remote=>true
+.row
+  .large-12.columns
     %h4 My List of Classes
     %table
       %tr
