added checkboxes for classes in add assessment form

--- a/app/views/assessments/_index.html.haml
+++ b/app/views/assessments/_index.html.haml
@@ -1,5 +1,8 @@
 .row
   .large-12.columns
+    = link_to "Add Assignment", new_assessment_path, :remote=>true
+.row
+  .large-12.columns
     %h3 My List of Assignments
     %table
       %tr
