delete and edit students

--- a/app/assets/stylesheets/gradr.scss
+++ b/app/assets/stylesheets/gradr.scss
@@ -23,9 +23,9 @@ body
 
 .tabs
 {
-font-family: 'Old Standard TT', serif;
-font-size: 24px;
-font-weight: bold;
+  font-family: 'Old Standard TT', serif;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .button_font
@@ -52,4 +52,20 @@ font-weight: bold;
 p
 {
   color: white;
+}
+
+.student
+{
+  float: left;
+}
+
+h3
+{
+  font-family: 'Old Standard TT', serif;
+  color: white;
+}
+
+.button
+{
+
 }
