--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
+#anonymous
 .row
   .large-12.columns
-    #anonymous
-    = link_to('Register', new_teacher_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
-    = link_to('Login', login_path, :remote => true, :class => 'button tiny radius', :class => 'button_font')
+    = link_to('Register', new_teacher_path, :remote => true, :class => 'button large radius')
+    = link_to('Login', login_path, :remote => true, :class => 'button large radius')
     #form
 #container
