--- a/app/views/students/_show.html.haml
+++ b/app/views/students/_show.html.haml
@@ -3,7 +3,7 @@
     %h4= "#{@student.first_name} #{@student.last_name}"
 .row
   .large-6.columns
-    %h6 Schedule
+    %h6 Roster
     %table
       %tr
         %td Class
