--- a/app/views/klasses/_index.html.haml
+++ b/app/views/klasses/_index.html.haml
@@ -4,7 +4,7 @@
     = link_to('Delete Class', @klass, :method=>'delete', :remote => true, :class => 'button tiny radius', :class => 'button_font')
 .row
   .large-12.columns
-    %h3 My List of Classes
+    %h2 My Classes
     %table
       %tr
         %td Name
