--- a/app/views/students/_form.html.haml
+++ b/app/views/students/_form.html.haml
@@ -5,6 +5,6 @@
       = f.text_field :last_name
       = f.label :first_name, :class => 'form_text'
       = f.text_field :first_name, :autofocus => true
-      = button_to_function('Cancel', 'cancel_student_form()', :class => 'button tiny radius alert')
-      = f.submit "Add Student", :class => 'button tiny radius success'
+      = button_to_function('Cancel', 'cancel_student_form()', :class => 'button tiny radius')
+      = f.submit "Add Student", :class => 'button tiny radius'
   .large-9.columns
