--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,15 @@
 #anonymous
 .row
+  .large-8.columns
+    %h3
+      Welcome to Gradr.
+      %p
+      %p
+        Track the progress of students across subjects and throughout the school year.
+      %p
+        Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+  .large-4.columns
+.row
   .large-12.columns
     = link_to('Register', new_teacher_path, :remote => true, :class => 'button large radius')
     = link_to('Login', login_path, :remote => true, :class => 'button large radius')
