--- a/app/views/klasses/_form.html.haml
+++ b/app/views/klasses/_form.html.haml
@@ -1,10 +1,10 @@
 .row
-  .large-3.columns
+  .large-6.columns
     %h4 New Class
     = form_for @klass, :remote=>true do |f|
-      = f.label       :name
+      = f.label       :name, nil, :class => 'form_text'
       = f.text_field  :name
-      = f.label       :period
+      = f.label       :period, nil, :class => 'form_text'
       = f.text_field  :period
-      = f.submit "Create Class"
-  .large-9.columns
+      = f.submit 'Create Class', :class => 'button tiny radius'
+  .large-6.columns
