--- a/app/views/klasses/create.js.erb
+++ b/app/views/klasses/create.js.erb
@@ -1,3 +1,3 @@
-$('#container').empty().append('<p>You have successfully added a class!</p>');
+$('#container').empty().append.('<p>You have successfully added a class!</p>');
 $('#form').empty().after('<p>You have successfully added a class!</p>');
 $('#form + p').fadeOut(3000, function(){ $('#form + p').remove(); });
