--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -13,6 +13,7 @@
 <div class='row'>
   <div class='tabbable'>
     <ul class="nav nav-tabs">
+      <li><%= link_to "Home", root_path, :class => 'tabs', :remote=>true %></li>
       <li><%= link_to "My Classes", klasses_path, :class => 'tabs', :remote=>true %></li>
       <li><%= link_to "My Assignments", assessments_path, :class => 'tabs', :remote=>true %></li>
       <li><%= link_to "My Students", students_path, :class => 'tabs', :remote=>true %></li>
