--- a/app/views/session/_form.html.haml
+++ b/app/views/session/_form.html.haml
@@ -1,11 +1,11 @@
 .row
-  .large-3.columns
+  .large-6.columns
     = form_tag '/login', :remote => true do
-      = label_tag :email
+      = label_tag :email, nil, :class => 'form_text'
       = text_field_tag :email, nil, :autofocus => true
       = label_tag :password, nil, :class => 'form_text'
-      = text_field_tag :password
-      = button_to_function('Cancel', 'cancel_login_form()', :class => 'button tiny radius alert')
-      = submit_tag 'Log In', :class => 'button tiny radius success'
-  .large-9.columns
+      = password_field_tag :password
+      = button_to_function('Cancel', 'cancel_login_form()', :class => 'button tiny radius')
+      = submit_tag 'Log In', :class => 'button tiny radius'
+  .large-6.columns
 
