--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,21 +16,9 @@
       <li><%= link_to "My Classes", klasses_path, :class => 'tabs', :remote=>true %></li>
       <li><%= link_to "My Assignments", assessments_path, :class => 'tabs', :remote=>true %></li>
       <li><%= link_to "My Students", students_path, :class => 'tabs', :remote=>true %></li>
+      <li><%= link_to "My Chart", chart_path, :class => 'tabs', :remote => true %></li>
     </ul>
   </div>
 </div>
 
-<!-- <div class="row">
-  <div class="large-12 columns">
-    <div class="nav-bar right">
-     <ul class="button-group">
-       <li><%= link_to('Home', root_path, :class => 'button tiny') %></li>
-
-       <%== login_nav %>
-      </ul>
-    </div>
-    <h2 class='subheader'>Gradr</h2>
-  </div>
-</div>
- -->
 
